Update native building + supports x86 + extracts to separate folder